--- a/WebContent/authors.html
+++ b/WebContent/authors.html
@@ -7,7 +7,7 @@
 
     <title>SWI | 5 - TP 01 - Authors</title>
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700&display=swap"
@@ -42,7 +42,7 @@
 
       <div class="authors-container">
         <a
-          href="https://github.com/angeloevangelista"
+          href="https://github.com/angeloevangelista/SW1-5"
           target="_blank"
           rel="noopener noreferrer"
           class="author"
