--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,7 +7,7 @@
 
     <title>SWI | 5 - TP 01 - Home</title>
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700&display=swap"
@@ -117,7 +117,7 @@
       </a>
 
       <div class="navbar-bottom-group">
-        <a href="/authors.html">
+        <a href="http://localhost:8080/TP-01/authors.html">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
