criando estrutura CRUD servlet

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -16,7 +16,9 @@
   </head>
   <body>
     <main class="container">
-      <h1>New employee</h1>
+      <h1>
+      	New employee
+      </h1>
 
       <form action="#">
         <div class="input-container">
@@ -100,7 +102,7 @@
         </div>
 
         <div class="form-footer">
-          <button type="reset" class="secondary">Reset</button>
+          <button type="reset" class="secondary">List Employees</button>
           <button type="submit" class="primary">Confirm</button>
         </div>
       </form>
@@ -109,7 +111,7 @@
     <nav class="navbar">
       <a
         title="Show me the code 🙃"
-        href="http://github.com/angeloevangelista"
+        href="https://github.com/angeloevangelista/SW1-5"
         target="_blank"
         rel="noopener noreferrer"
       >
