--- a/WebContent/authors.html
+++ b/WebContent/authors.html
@@ -17,7 +17,7 @@
   <body>
     <nav class="navbar">
       <div>
-        <a href="/">
+        <a href="http://localhost:8080/TP-01/index.html">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
