--- a/TP-01/WebContent/index.html
+++ b/TP-01/WebContent/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,7 +7,7 @@
 
     <title>SWI | 5 - TP 01 - Home</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700&display=swap"
@@ -16,11 +16,9 @@
   </head>
   <body>
     <main class="container">
-      <h1>
-      	New employee
-      </h1>
+      <h1>New employee</h1>
 
-      <form action="CreateServlet" method="POST">
+      <form class="form" action="/CreateServlet" method="POST">
         <div class="input-container">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -38,7 +36,7 @@
             <circle cx="12" cy="7" r="4"></circle>
           </svg>
 
-          <input type="text" id="name" name="name" placeholder="Name" />
+          <input type="text" name="name" placeholder="Name" />
         </div>
 
         <div class="input-container">
@@ -56,10 +54,10 @@
             <path d="M16 8v5a3 3 0 0 0 6 0v-1a10 10 0 1 0-3.92 7.94"></path>
           </svg>
 
-          <input type="email" name="email" id="email" placeholder="E-mail" />
+          <input type="email" name="email" placeholder="E-mail" />
         </div>
 
-        <div class="input-container" data-error="true">
+        <div class="input-container" data-error="false">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -76,10 +74,10 @@
             <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
           </svg>
 
-          <input type="password" id="password" name="password" placeholder="Password" />
+          <input type="password" name="password" placeholder="Password" />
         </div>
 
-        <div class="input-container" data-error="true">
+        <div class="input-container" data-error="false">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -96,9 +94,7 @@
             <circle cx="12" cy="10" r="3"></circle>
           </svg>
 
-          <select name="country" id="state" >
-            <option value="value_01">Value 01</option>
-          </select>
+          <select name="country"></select>
         </div>
 
         <div class="form-footer">
@@ -119,7 +115,30 @@
       </a>
 
       <div class="navbar-bottom-group">
-        <a href="http://localhost:8080/TP-01/authors.html">
+        <!-- <a href="http://localhost:8080/TP-01/authors.html"> -->
+
+        <a href="/employees.html">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="feather feather-list"
+          >
+            <line x1="8" y1="6" x2="21" y2="6"></line>
+            <line x1="8" y1="12" x2="21" y2="12"></line>
+            <line x1="8" y1="18" x2="21" y2="18"></line>
+            <line x1="3" y1="6" x2="3.01" y2="6"></line>
+            <line x1="3" y1="12" x2="3.01" y2="12"></line>
+            <line x1="3" y1="18" x2="3.01" y2="18"></line>
+          </svg>
+        </a>
+        <a href="/authors.html">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -138,6 +157,9 @@
           </svg>
         </a>
       </div>
-    </nav>  
+    </nav>
+
+    <script src="./assets/scripts/global.js"></script>
+    <script src="./assets/scripts/index.js"></script>
   </body>
 </html>
