--- a/TP-01/WebContent/authors.html
+++ b/TP-01/WebContent/authors.html
@@ -7,7 +7,7 @@
 
     <title>SWI | 5 - TP 01 - Authors</title>
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700&display=swap"
@@ -112,7 +112,7 @@
     <nav class="navbar">
       <a
         title="Show me the code 🙃"
-        href="http://github.com/angeloevangelista"
+        href="https://github.com/angeloevangelista/SW1-5"
         target="_blank"
         rel="noopener noreferrer"
       >
