--- a/TP-01/WebContent/index.html
+++ b/TP-01/WebContent/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,7 +7,7 @@
 
     <title>SWI | 5 - TP 01 - Home</title>
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700&display=swap"
@@ -94,11 +94,28 @@
             <circle cx="12" cy="10" r="3"></circle>
           </svg>
 
-          <select name="country"></select>
+          <select name="country" style="background: #25273E;" >	          
+	          	<option value="Brasil" selected > Brasil </option>
+				<option value="Brunei">Brunei</option>
+				<option value="Bulgária">Bulgária</option>
+				<option value="Burkina Fasso">Burkina Fasso</option>
+				<option value="botão">botão</option>
+				<option value="Cabo Verde">Cabo Verde</option>
+				<option value="Camarões">Camarões</option>
+				<option value="Camboja">Camboja</option>
+				<option value="Canadá">Canadá</option>
+				<option value="Cazaquistão">Cazaquistão</option>
+				<option value="Chade">Chade</option>
+				<option value="Chile">Chile</option>
+				<option value="China">China</option>
+				<option value="Cidade do Vaticano">Cidade do Vaticano</option>
+				<option value="Colômbia">Colômbia</option>
+				<option value="Congo">Congo</option>
+          </select>
         </div>
 
         <div class="form-footer">
-          <button type="reset" class="secondary">Reset</button>
+          <button type="reset" class="secondary" >Reset</button>
           <button type="submit" class="primary">Confirm</button>
         </div>
       </form>
@@ -115,9 +132,7 @@
       </a>
 
       <div class="navbar-bottom-group">
-        <!-- <a href="http://localhost:8080/TP-01/authors.html"> -->
-
-        <a href="/employees.html">
+        <a href="http://localhost:8080/TP-01/ReadServlet">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -138,7 +153,7 @@
             <line x1="3" y1="18" x2="3.01" y2="18"></line>
           </svg>
         </a>
-        <a href="/authors.html">
+        <a href="http://localhost:8080/TP-01/authors.html" >
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
