--- a/TP-01/static/pages/employees.html
+++ b/TP-01/static/pages/employees.html
@@ -13,6 +13,12 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700&display=swap"
       rel="stylesheet"
     />
+
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav class="navbar">
@@ -51,60 +57,7 @@
             <th>Actions</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>01</td>
-            <td>Angelo Evangelista</td>
-            <td>123456</td>
-            <td>angeloevan.ane@gmail.com</td>
-            <td>Brazil</td>
-            <td class="employee-actions">
-              <button onclick="handleEdit(1)">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  class="feather feather-edit"
-                >
-                  <path
-                    d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
-                  ></path>
-                  <path
-                    d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
-                  ></path>
-                </svg>
-              </button>
-
-              <button onclick="handleDelete(1)">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="currentColor"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  class="feather feather-trash-2"
-                >
-                  <polyline points="3 6 5 6 21 6"></polyline>
-                  <path
-                    d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
-                  ></path>
-                  <line x1="10" y1="11" x2="10" y2="17"></line>
-                  <line x1="14" y1="11" x2="14" y2="17"></line>
-                </svg>
-              </button>
-            </td>
-          </tr>
-        </tbody>
+        <tbody></tbody>
       </table>
     </main>
 
@@ -141,7 +94,7 @@
     </nav>
 
     <div class="edit-modal" name="edit-modal">
-      <form class="form" action="#">
+      <form name="employee-form" class="form">
         <div class="input-container">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -221,7 +174,9 @@
         </div>
 
         <div class="form-footer">
-          <button name="cancel-edit-button" type="button" class="secondary">Cancel</button>
+          <button name="cancel-edit-button" type="button" class="secondary">
+            Cancel
+          </button>
           <button type="submit" class="primary">Update</button>
         </div>
       </form>
@@ -229,5 +184,8 @@
 
     <script src="./static/scripts/global.js"></script>
     <script src="./static/scripts/employees.js"></script>
+    <script src="./static/lib/toastr/toastr.min.js"></script>
+
+    <link rel="stylesheet" href="./static/lib/toastr/toastr.min.css" />
   </body>
 </html>
