corrigindo url github angelo

--- a/TP-01/static/pages/authors.html
+++ b/TP-01/static/pages/authors.html
@@ -42,7 +42,7 @@
 
       <div class="authors-container">
         <a
-          href="https://github.com/angeloevangelista/SW1-5"
+          href="https://github.com/angeloevangelista"
           target="_blank"
           rel="noopener noreferrer"
           class="author"
